# kokoro-onnx-fastapi-dokcer-demo

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
