[project]
name = "chinese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "cn2an>=0.5.24",
    "jieba>=0.42.1",
    "kokoro-onnx>=0.5.0",
    "misaki>=0.9.4",
    "ordered-set>=4.1.0",
    "pypinyin>=0.55.0",
    "pypinyin-dict>=0.9.0",
    "soundfile>=0.13.1",
    "uvicorn>=0.47.0",
]
